[package]
name = "twitch_archiver_cli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_archiver = { version = "0.3.1" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
